--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>I am a UX designer - Henrique Freitas</title>
+        <title>I am a Product Designer - Henrique Freitas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -38,11 +38,11 @@
             </nav>
             <div id="hero" role="banner">
                 <hgroup>
-                    <h1>Hi, I'm Henrique :)</h1>
-                    <h2>And I make people feel love for using digital products and services</h2>
+                    <h1>Hellow :)</h1>
+                    <h2>My name is Henrique. I create, deliver and scale great products for great organizations</h2>
                 </hgroup>
                 <a href="portfolio.html" id="portfolio-hero-link">Check my portfolio</a>
-                <a href="#hire" id="cta-hire-link">Hire me</a>
+                <a href="#hire" id="cta-hire-link">Lets talk</a>
             </div>
         </header>
         <main role="main">
@@ -50,7 +50,7 @@
                 <header>
                     <hgroup>
                         <h1>Latest Work</h1>
-                        <h2>Check out what I've been doing lately with my UX skills</h2>
+                        <h2>Check out what I've been doing lately</h2>
                     </hgroup>
                 </header>
                 <div class="row">
@@ -81,23 +81,13 @@
                 <header>
                     <hgroup>
                         <h1>About me</h1>
-                        <h2>I'm a UX/UI Designer, front end developer and programming languages explorer.</h2>
+                        <h2>I am a product designer, front end developer and programming languages explorer.</h2>
                     </hgroup>
                 </header>
                 <div class="about-picture">
-                    <img src="assets/images/profile-photo.jpg" alt="Sou o Henrique e sou um UX designer." class="img-responsive">
+                    <img src="assets/images/profile-photo.jpg" alt="Hi, I'm Henrique. Nice to meet you! " class="img-responsive">
                 </div>
-                <p>After more than six years of career I've done many different things, all with the same objective: help people to achieve their business goals by understanding and using technology. I've worked as a graphic designer for web and printed media, full stack developer, systems analyst, infrastructure analyst and project manager. Although very different, each of my experiences helps me to be a better UX professional and for that I face my work as a group of everything I have ever done in my professional life. My bachelor in Information Technology by FIAP also adds many points to that.</p>
-                <p>I've worked with UX on freelance projects and specialized myself in design by Gama Academy. Nowadays I work as a UX Designer at a consulting agency.</p>
-                <p>I love Internet of Things and EdTechs. My dream is to build fantastic experiences that really contribute to help individuals and groups to have a better education.</p>
-                <p>My career and studies are guided by the following premises:</p>
-                <blockquote class="alert alert-info">
-                    <ul>
-                        <li>IoT isn't fiction and UX will have an important role in this field.</li>
-                        <li>Algorithms will rule the world and will be the foundation of each time more business models.</li>
-                        <li>Know how to code is half way done, the rest are design patterns and developing for the next.</li>
-                    </ul>
-                </blockquote>
+                <p>I've been working with technology since 2010 and already wore the shirt of the developer, of the business analyst, of the infrastructure coordinator, of the product designer and most recently, of the growth hacking. I work with CRO — Conversion Rate Optimization — making studies on products to find growth opportunities and testing them to see if they really exist. This is a role that combine the previous ones and add data science to the mixture.</p>
                 <a href="downloads/henrique-freitas-souza-resume.pdf" target="_blank">Check out my resume in PDF</a>
             </section>
             <section id="testimonials" class="section container">
@@ -120,7 +110,7 @@
                 <header>
                     <hgroup>
                         <h1>Hire</h1>
-                        <h2>Let's have a chat, a coffee and make your project get out of paper :)</h2>
+                        <h2>Let's have a chat, a coffee and make your project get out of the building :)</h2>
                     </hgroup>
                 </header>
                 <div class="contact-channel">
