--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
                     <img src="assets/images/profile-photo.jpg" alt="Hi, I'm Henrique. Nice to meet you! " title="Hi, I'm Henrique. Nice to meet you! " class="img-responsive">
                 </div>
                 <p>I've been working with technology since 2010 and already wore the shirt of the developer, of the business analyst, of the infrastructure coordinator, of the product designer and most recently, of the growth hacking. I work with CRO — Conversion Rate Optimization — making studies on products to find growth opportunities and testing them to see if they really exist. This is a role that combines the previous ones and add data science to the mixture.</p>
-                <p>My work is heavily focused on the so called "small data". If you've ever watched Ant Man, read about the Mandelbrot set or saw an gif with inifite depth then you have a very good view of it. My job is to find improvements on products based on that small data and the voice of its users.</p>
-                <p>I cannot leave without saying that I love my guitar. <3</p>
+                <p>My work is heavily focused on the so called "small data". If you've ever watched Ant Man, read about the Mandelbrot set or saw an gif with inifite depth, then you have a very good view of it. My job is to find improvements on products based on that small data and the voice of its users.</p>
                 <a href="downloads/henrique-freitas-souza-resume.pdf" target="_blank">[PDF] Check out my resume to learn more about me</a>
             </section>
             <section id="testimonials" class="section container">
