--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>My work with UX Design - Henrique Freitas</title>
+        <title>My work with digital products - Henrique Freitas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -39,7 +39,7 @@
             <div id="hero" role="banner">
                 <hgroup>
                     <h1>My portfolio</h1>
-                    <h2>Check out some of my work with UX and UI</h2>
+                    <h2>Check out some of my work</h2>
                 </hgroup>
             </div>
         </header>
@@ -52,7 +52,7 @@
                     </ol>
                     <hgroup>
                         <h1>Projects</h1>
-                        <h2>Check out my main work, the characteristics of each project and the final product delivered.</h2>
+                        <h2>There are some of my latest contributions to products. Made with <3 and learned a lot!</h2>
                     </hgroup>
                 </header>
                 <div class="row">
