--- a/projects/musicar.html
+++ b/projects/musicar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head lang="pt-br">
-        <title>Musicar - My work with UX - Henrique Freitas</title>
+        <title>Musicar - My work with digital products - Henrique Freitas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link rel="icon" href="../favicon.ico" type="image/x-icon">
@@ -81,9 +81,9 @@
                 <p>We've had a very low acceptance in the first version of the page and a bounce rate of 95%, 18 subscriptions and more than 60.000 views on the combined ads from Facebook and Google. We've learned that the landing page was too big, slow to load on mobile devices and not very optimized for mobile as well. More than 90% of the Facebook users came from mobile. After learning this we've rebuilt the landing page with only the essential content and an low fidelity interaction design. We've received an invitation from Santo Angelo to present and validate our solution at Expo Music 2016. The second attempt failed again, as we've had no subscriptions, but the interaction design was very intuitive for those who tested the solution. Minor changes were recorded as we're receiving feedback.</p>
                 <h3>Result</h3>
                 <p>The first landing page was built using WordPress with a theme that I've modified. To increase the performance and remove unnecessary resources from the application, the final landing page was built from scratch using some of the Google Material Design processes through the framework Materialize. This was done to make users feel more familiar with the interface, as they've had experience with some of the elements on mobile devices in the past. The mobile mock-ups were built focusing on the interaction rather than the visual. We've focused on testing the match interaction, where teachers and students find each other, as this is the core functionality that makes the MVP.</p>
-                <!--<div class="alert alert-info">
-                    <strong>Interaction design: </strong><a href="https://invis.io/QP8KSQB5G" target="_blank">https://invis.io/QP8KSQB5G</a>
-                </div>-->
+                <div class="alert alert-info">
+                    <strong>Interaction design: </strong><a href="https://invis.io/BTCUZ0F74" target="_blank">https://invis.io/QP8KSQB5G</a>
+                </div>
                 <div class="row">
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/musicar/mockup/home.png">
