--- a/projects/personal-website.html
+++ b/projects/personal-website.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>My Portfolio - My work with UX - Henrique Freitas</title>
+        <title>My Portfolio - My work with digital products - Henrique Freitas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link rel="icon" href="../favicon.ico" type="image/x-icon">
